--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ clean {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'com.mysql:mysql-connector-j'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	// QueryDsl 설정
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	implementation "com.querydsl:querydsl-codegen:5.0.0" // QueryDSL 코드 생성
